# whisper-scribe

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
docs/: AUDIT-2026-04-16-PASS2.md  AUDIT-2026-04-16-PASS3.md  AUDIT-2026-04-16-PASS4.md  AUDIT-2026-04-16-PASS5.md  AUDIT-2026-04-16.md  REFACTOR-PASS-1.md  REFACTOR-PASS-2.md  REFACTOR-PASS-3.md  REFACTOR-PASS-4.md
src/: App.tsx  events.ts  styles.css  types.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: mlx_screen_analyze.py  mlx_transcribe.py  requirements.txt  screen_requirements.txt  test_mlx_screen_analyze.py  test_prompt_eval.py
src-tauri/src/: audio_dir.rs  audio_engine.rs  commands.rs  device_manager.rs  events.rs  lib.rs  main.rs  pipeline.rs  power_monitor.rs  screen_analyzer.rs  screen_capture.rs  screen_pipeline.rs  shortcuts.rs  state.rs  storage.rs  transcriber.rs  tray.rs
src-tauri/tests/: audio_and_transcriber.rs  audio_capture_e2e.rs  device_manager_exhaustive.rs  functional_e2e.rs  screen_context_integration.rs  search_performance_regression.rs  storage_exhaustive.rs  storage_integration.rs  test_cpal_live.rs
src/components/: AudioLevelBars.tsx  DragHandle.tsx  ExpandedCardModal.tsx  FilterPanel.tsx  HourSlotCard.tsx  ModeToggle.tsx  SearchBar.tsx  StatusBar.tsx  Timeline.tsx  TranscriptionCard.tsx  UnifiedHourSlotCard.tsx
src/utils/: format.ts  highlight.ts  invoke.ts
