[package]
name = "whisper-scribe"
version = "0.2.0"
edition = "2024"

[lib]
name = "whisper_scribe_lib"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "whisper-scribe"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
window-vibrancy = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Only `time` (for `sleep`) and `macros` (for `#[tauri::command] async`) are
# used. `full` pulled every Tokio subsystem — net, fs, signal, process — with
# no callers.
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
cpal = "0.15"
rubato = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
hound = "3.5"
dirs = "6"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
crossbeam-channel = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = "0.2"
core-foundation = "0.10"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"

[features]
custom-protocol = ["tauri/custom-protocol"]
# Enables the quarantined `functional_e2e.rs` + `storage_exhaustive.rs`
# integration tests, which target the legacy `transcriptions` schema that
# pre-dates the `hour_slots` migration. The real regression suite
# (`storage_integration.rs`) runs unconditionally and tests the public
# `Storage` API. Reach for this feature only when validating migration code.
legacy_schema_tests = []
